Improved bootstrapping